Added exclamation mark

--- a/Capstone Project/index.html
+++ b/Capstone Project/index.html
@@ -11,7 +11,7 @@
     <hr/>
     <h2>About me</h2>
     <p>I am a hardworking and disciplined student studying web development
-        while I am waiting for the next academic school year to start. 
+        while I am waiting for the next academic school year to start.! 
     </p>
     <hr/>
     <h2>Education</h2>
