--- a/Capstone Project/index.html
+++ b/Capstone Project/index.html
@@ -11,7 +11,7 @@
     <hr/>
     <h2>About me</h2>
     <p>I am a hardworking and disciplined student studying web development
-        while I am waiting for the next academic school year to start.! 
+        while I am waiting for the next academic school year to start.
     </p>
     <hr/>
     <h2>Education</h2>
@@ -44,6 +44,7 @@
     <ul>
         <li>English ⭐⭐⭐⭐⭐ (Native Language)</li>
         <li>Afrikaans ⭐⭐⭐</li>
+        <li>Czech ⭐</li>
     </ul>
     <hr/>
     <h2>Other</h2>
@@ -55,7 +56,10 @@
             <a href="./Public/contact.html">Contact Me</a>
         </li>
     </ul>
-
-    <p>© Toadyoshi. All rights reserved.</p>
+    <footer>
+        <small>
+          Copyright © Toadyoshi. All Rights Reserved.
+        </small>
+      </footer>
 </body>
 </html>
